@@ -1,6 +1,6 @@
 .\" A man page for tmpwatch(8).
 .\"
-.\" Copyright (C) 1997-2001, 2004-2008 Red Hat, Inc.  All rights reserved.
+.\" Copyright (C) 1997-2001, 2004-2009 Red Hat, Inc.  All rights reserved.
 .\"
 .\" This copyrighted material is made available to anyone wishing to use,
 .\" modify, copy, or redistribute it subject to the terms and conditions of the
@@ -21,7 +21,7 @@
 .\"                    Mike A. Harris <mharris@redhat.com>
 .\"                    Miloslav Trmac <mitr@redhat.com>
 .\"
-.TH TMPWATCH 8 "Fri Dec 14 2007" "Red Hat Linux" "System Administrator's Manual"
+.TH TMPWATCH 8 "2009-10-15" "Red Hat Linux" "System Administrator's Manual"
 .UC 4
 .SH NAME
 tmpwatch \- removes files which haven't been accessed for a period of time
@@ -60,6 +60,8 @@ The
 .I time
 argument is a number with an optional single-character suffix
 specifying the units:
+.B m
+for minutes,
 .B h
 for hours,
 .B d
