@@ -1,5 +1,6 @@
 2.9.16
 * Add --exclude-pattern.
+* Support specifying time in minutes.
 
 2.9.15
 * A small portability improvement.
