@@ -1,7 +1,10 @@
 2009-10-15  Miloslav Trmač  <mitr@redhat.com>
 
 	* Makefile (VERSION): Version 2.9.16.
-	* NEWS: update.
+	* NEWS: Update.
+
+	* tmpwatch.c (main): Support 'm' unit specifier, meaning "minutes".
+	* tmpwatch.8: Document the 'm' unit specifier.
 
 	* tmpwatch.c (struct excluded_pattern, excluded_patterns)
 	(excluded_patterns_tail, main): New option --exclude-pattern.
